# rest-services

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
miwg_services/: main.py
rest_services/: constants.py  main.py
rest_services/models/: models.py
rest_services/routers/: info.py  items.py
tests/: test_main.py
