[tool.poetry]
name = "rest-services"
version = "0.1.0"
description = "REST services architype project with poetry and fastapi"
authors = ["Tim Stephenson <tim@knowprocess.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
httpx = "^0.25.0"
pytest = "^7.4.3"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
